# 3D_mesh_hole_detection

./: CMakeLists.txt  README.md  detection.hpp  main.cpp  util.hpp
